--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <div id="loading">
         <div class="spinner-border text-primary" role="status"></div>
-        <br>Chargement et traitement des 7200 lignes...
+        <br>Chargement et traitement des lignes...
     </div>
 
     <div class="table-responsive">
@@ -75,7 +75,7 @@
 <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
 
 <script>
-    const excelFile = 'cancereux.xlsx';
+    const excelFile = 'cancereuxnew.xlsx';
 
     async function loadExcel() {
         try {
@@ -143,4 +143,5 @@
 </script>
 
 </body>
+
 </html>
