--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
 
 <script>
-    const excelFile = 'cancereuxnew.xlsx';
+    const excelFile = 'CANCEREUXNEW.xlsx';
 
     async function loadExcel() {
         try {
@@ -145,3 +145,4 @@
 </body>
 
 </html>
+
