--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             color: #7f8c8d; 
             margin-bottom: 25px; 
             font-style: italic;
-            border-bottom: 2px solid #3498db; 
             padding-bottom: 10px;
+            display: inline-block;
         }
 
         /* Ajustements pour le tableau DataTables */
@@ -144,5 +144,6 @@
 </body>
 
 </html>
+
 
 
