--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Médicaments Remboursables</title>
+    <title>Médicaments Remboursables pour Cancéreux</title>
     
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap5.min.css" rel="stylesheet">
@@ -50,7 +50,7 @@
 <body>
 
 <div class="container">
-    <h1>Médicaments Remboursables pour les Cancereux</h1>
+    <h1>Médicaments Remboursables pour les Maladie Cancéreuses</h1>
     <div class="signature">By LammariOmDev</div>
 
     <div id="loading">
@@ -144,6 +144,7 @@
 </body>
 
 </html>
+
 
 
 
