--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <body>
 
 <div class="container">
-    <h1>Médicaments Remboursables pour les Maladie Cancéreuses</h1>
+    <h1>Médicaments Remboursables - Maladies Cancéreuses</h1>
     <div class="signature">By LammariOmDev</div>
 
     <div id="loading">
@@ -144,6 +144,7 @@
 </body>
 
 </html>
+
 
 
 
