--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <div id="loading">
         <div class="spinner-border text-primary" role="status"></div>
-        <br>Chargement et traitement des lignes...
+        <br>Chargement et traitement des produits...
     </div>
 
     <div class="table-responsive">
@@ -144,6 +144,7 @@
 </body>
 
 </html>
+
 
 
 
