--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             font-weight: bold;
             text-transform: uppercase;
             letter-spacing: 1px;
+			text-align: center; /* Centré */
         }
 
         .signature {
@@ -168,6 +169,7 @@
 </body>
 
 </html>
+
 
 
 
