--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             text-transform: uppercase;
             letter-spacing: 1px;
 			text-align: center; /* Centré */
+			border-bottom: 2px solid #3498db;
         }
 
         .signature {
@@ -187,6 +188,7 @@
 </body>
 
 </html>
+
 
 
 
