--- a/index.html
+++ b/index.html
@@ -30,9 +30,21 @@
             text-transform: uppercase;
             letter-spacing: 1px;
 			text-align: center; /* Centré */
-			border-bottom: 2px solid #3498db;
+			/*border-bottom: 2px solid #3498db;*/
         }
-
+/* --- NOUVEAU : La ligne grise avec ombre --- */
+        hr.custom-line {
+            border: 0; 
+            height: 1px; /* Épaisseur de la ligne */
+            background-color: #bdc3c7; /* Couleur grise */
+            width: 100%; /* Largeur totale */
+            margin-top: 5px;
+            margin-bottom: 15px;
+            opacity: 1;
+            /* L'ombre dégradée en dessous */
+            box-shadow: 0 6px 6px -2px rgba(0,0,0,0.15); 
+        }
+        /* ------------------------------------------ */
         .signature {
             font-size: 11px; 
             color: #7f8c8d; 
@@ -188,6 +200,7 @@
 </body>
 
 </html>
+
 
 
 
