--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             text-transform: uppercase;
             letter-spacing: 1px;
 			text-align: center; /* Centré */
-			/*border-bottom: 2px solid #3498db;*/
+			border-bottom: 2px solid #3498db;
         }
 /* --- NOUVEAU : La ligne grise avec ombre --- */
         hr.custom-line {
@@ -199,6 +199,7 @@
 </body>
 
 </html>
+
 
 
 
