--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 <body>
 
 <div class="container">
-    <h1>Médicaments Remboursables - Maladies Cancéreuses</h1>
-    <div class="signature">By <a href="https://facebook.com/LammariOmDev" target="_blank">LammariOmDev®</a></div>
+    <h1>Médicaments Remboursables - Maladies Du Cancer</h1>
+    <div class="signature">By <a href="https://facebook.com/LammariOmDev" target="_blank">LammariOm® Develops ©2025</a></div>
 
     <div id="loading">
         <div class="spinner-border text-primary" role="status"></div>
@@ -199,6 +199,7 @@
 </body>
 
 </html>
+
 
 
 
